# Project-602

./: .gitignore  README.md  index.html  model.blend  model.blend1  package-lock.json  package.json  protocol.rsdl  rsdl-gen.sh  run-cloc.sh  tsconfig.json  vite.config.ts
artworks/: LICENSE-PROPRIETARY  README.md  model.blend  model.blend1
artworks/bishop/: README.txt
artworks/knight/: README.txt
chesscript/: 1.js  Cargo.toml  ast.rsdl
chesscript-blocky/: code-preview.html  index.html  mission-editor.html  package.json  vite.config.ts
chesscript-blocky/public/: code-preview.html
chesscript-blocky/src/: index.css  index.js  serialization.js  toolbox.js
chesscript-vscode/: CHANGELOG.md  README.md  esbuild.js  langconfig.json  package-lock.json  package.json
chesscript-vscode/sample/: a.p602
chesscript-vscode/src/: ast.ts  extension.ts  lex.ts  min-parse.ts
chesscript/sample/: a.js  a.nomodule.js  a.p602
chesscript/src/: ast.rs  ast_inc.rs  codegen.rs  lib.rs
chesscript/src/driver/: main.rs  parse_ast.rs
chesscript/src/parse/: context.rs  context_dialogue.rs  context_executable.rs  context_metadata.rs  mod.rs  parse.rs  parse_dialogue.rs  parse_metadata.rs
public/: _headers  achievements.js
public/2d-chess-pieces/: svg2css.cjs  svg2css.css
public/chess-pieces/: LICENSE  README.txt
public/chess-pieces-obj/: chess-pieces.glb
public/chessdata/: common-opening-positions.json  opening-book.json  training-content.json
public/fairy-stockfish/: chess310.ini  (+2 more)
src/: assetloader.ts  chardef.ts  config.ts  context.ts  fischer960.d.ts  globalpreload.d.ts  index.css  index.ts  index.tsx  level.ts  min-jquery.ts  protocol.ts  stockfish.d.ts  tsx-dom.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: analyse.rs  main.rs  protocol.rs  protocol_inc.rs
src-tauri/stockfish/: captureall.nnue  variants.ini
(+120 files in other folders)
