[package]
name = "chesscript"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chesscript-ast"
path = "src/driver/parse_ast.rs"

[[bin]]
name = "chesscript"
path = "src/driver/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
phf = { version = "0.11", features = ["macros"] }
xjbutil = { version = "0.9.0-ECHO", features = ["either"], default-features = false }
