[package]
name = "project-602"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uciengine = { git = "https://github.com/chuigda/uciengine", rev = "58a859dbde947124612c4bf0ac2c1697053ab885" }

[features]
custom-protocol = ["tauri/custom-protocol"]
